Teste para uma nova navbar

--- a/Páginas/candidato_recorrer.html
+++ b/Páginas/candidato_recorrer.html
@@ -78,6 +78,37 @@
 
 
 
+    <p>Se o candidato for Não Homologado na Verificação Presencial, é possível recorrer?
+
+        Sim. Se o candidato tiver como resultado de sua verificação “não homologado“, poderá recorrer.
+
+        O recurso deverá ser interposto, exclusivamente, via Portal do Candidato, conforme as orientações que constam no
+        Edital do processo seletivo e, se for o caso, também no Manual do Candidato, em formulário próprio, permitindo o
+        envio de documentos adicionais, no espaço destinado à postagem da autodeclaração étnico-racial.
+
+        O recurso será avaliado por comissão especial constituída para esse fim. A decisão será comunicada ao candidato
+        por meio do Portal do Candidato. A Comissão Permanente de Verificação da Autodeclaração Étnico-Racial não
+        orienta sobre a interposição de recursos. O Candidato deve se basear nas informações constantes no Edital do
+        Processo Seletivo e, se for o caso, no Manual do Candidato.
+
+        Aspectos técnicos da postagem do recurso no Portal do Candidato:
+
+        O requerimento de recurso deve ser preenchido no Portal do Candidato.
+        Após preencher o requerimento de recurso, abre-se novamente no Portal do Candidato a possibilidade de abrir a
+        aba onde já fora postada a autodeclaração.
+        No mesmo espaço que fora feita a postagem da autodeclaração podem ser acrescentados novos documentos visando
+        apreciação em recurso.
+        O candidato recorrente deve se certificar de que os documentos anexados foram acrescentados junto à
+        autodeclaração (que ali já estava) para somente após completo todo o recurso dar o clique de envio dentro dos
+        prazos estabelecidos para o recurso administrativo. Após esse clique não é possível acrescentar ou alterar o
+        recurso e o procedimento deve chegar à comissão de recursos para análise.
+        A comissão de recursos pode fazer solicitações, quando coloca seu pedido em diligência e dá até 3 dias úteis
+        para responder. Essas respostas devem ser enviadas através do portal.
+        Dúvidas relacionadas à tramitação do recurso podem ser enviadas para o e-mail comissaorecursalafericao@ufrgs.br.
+    </p>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
