--- a/Páginas/comprovar_renda.html
+++ b/Páginas/comprovar_renda.html
@@ -77,6 +77,23 @@
     </nav>
 
 
+
+    <p>Quem precisa comprovar renda?
+
+        Os candidatos que se inscreveram e foram classificados nas modalidades L1, L2, L9 e L10, além das documentações
+        relativas à comprovação do Ensino Médio, da autodeclaração étnico-racial (no caso do L2 e do L10) e dos
+        documentos que comprovem a deficiência (no caso do L9 e do L10), têm de comprovar condição de renda, ou seja,
+        devem apresentar documentos que provem que a renda familiar bruta mensal é igual ou inferior a 1,5
+        salário-mínimo nacional per capita.
+
+        Assista a este vídeo:
+
+
+        Atenção: no caso do Vestibular, se o candidato se inscreveu como cotista, mas atingiu pontuação suficiente para
+        ingressar pelo acesso universal, não será necessário o envio de documentos relativos à reserva de vagas. O
+        sistema de ingresso pode ser consultado no boletim de desempenho. Veja no exemplo abaixo.</p>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
