--- a/Páginas/cursos_graduação.html
+++ b/Páginas/cursos_graduação.html
@@ -78,6 +78,121 @@
 
 
 
+    <p>Quais os cursos de graduação oferecidos pela UFRGS?
+
+        A UFRGS oferta diversos cursos de graduação nos campi Centro, Vale, ESEFID, Saúde e Litoral Norte. Os cursos
+        estão disponíveis pelo Vestibular e pelo SISU. A exceção é o curso de Música, que exige prova de habilitação
+        específica e oferece vagas apenas via Vestibular. O curso Interdisciplinar em Ciência e Tecnologia –
+        Bacharelado, do Campus Litoral, possui terminalidades em quatro áreas específicas.
+
+        Há, ainda, cursos com processos seletivos específicos: Desenvolvimento Rural, Pedagogia a Distância,
+        Licenciatura em Ciências Sociais, Licenciatura em Geografia, Pedagogia , Ciências da Natureza, Ciências
+        Biológicas EaD, Biblioteconomia EaD, Educação do Campo, Educação do Campo – Campus Litoral .
+
+        Confira abaixo a lista dos cursos de graduação presenciais:
+
+        Administração – Diurno
+        Administração – Noturno
+        Administração Pública e Social – Noturno
+        Agronomia
+        Arquitetura e Urbanismo
+        Arquivologia – Noturno
+        Artes Visuais – Bacharelado
+        Artes Visuais – Licenciatura
+        Biblioteconomia
+        Biomedicina
+        Biotecnologia
+        Ciência da Computação
+        Ciências Atuariais – Noturno
+        Ciências Biológicas – Bacharelado
+        Ciências Biológicas – Licenciatura
+        Ciências Biológicas – Ênfases em Biologia Marinha e Costeira e em Gestão Ambiental Marinha e Costeira (BIOMAR) –
+        Bacharelado
+        Ciências Contábeis – Noturno
+        Ciências Econômicas – Diurno
+        Ciências Econômicas – Noturno
+        Ciências Jurídicas e Sociais – Direito – Diurno
+        Ciências Jurídicas e Sociais – Direito – Noturno
+        Ciências Sociais – Diurno
+        Ciências Sociais – Noturno
+        Comunicação Social – Publicidade e Propaganda
+        Dança – Licenciatura
+        Design de Produto
+        Design Visual
+        Educação Física – Bacharelado
+        Educação Física – Licenciatura
+        Enfermagem
+        Engenharia Ambiental
+        Engenharia Cartográfica – Noturno
+        Engenharia Civil
+        Engenharia de Alimentos
+        Engenharia de Computação
+        Engenharia de Controle e Automação
+        Engenharia de Energia
+        Engenharia de Materiais
+        Engenharia de Minas
+        Engenharia de Produção
+        Engenharia Elétrica
+        Engenharia Física
+        Engenharia Hídrica
+        Engenharia Mecânica
+        Engenharia Metalúrgica
+        Engenharia Química
+        Estatística
+        Farmácia
+        Filosofia – Bacharelado – Diurno
+        Filosofia – Licenciatura – Noturno
+        Física – Bacharelado
+        Física – Licenciatura – Diurno
+        Física – Licenciatura – Noturno
+        Física – Bacharelado – Astrofísica
+        Fisioterapia
+        Fonoaudiologia
+        Geografia – Diurno
+        Geografia – Noturno
+        Geologia
+        História – Diurno
+        História – Noturno
+        História da Arte – Bacharelado – Noturno
+        Interdisciplinar em Ciência e Tecnologia – Bacharelado – Campus Litoral*
+        Jornalismo
+        Letras – Bacharelado
+        Letras – Bacharelado: Formação Tradutor e Intérprete de Libras
+        Letras – Licenciatura
+        Matemática – Bacharelado
+        Matemática – Licenciatura – Diurno
+        Matemática – Licenciatura – Noturno
+        Medicina
+        Medicina Veterinária
+        Museologia
+        Música
+        Nutrição
+        Odontologia – Diurno
+        Odontologia – Noturno
+        Pedagogia
+        Políticas Públicas – Bacharelado – Noturno
+        Psicologia – Diurno
+        Psicologia – Noturno
+        Publicidade e Propaganda
+        Química
+        Química – Licenciatura – Noturno
+        Química Industrial – Noturno
+        Relações Internacionais
+        Relações Públicas
+        Saúde Coletiva – Bacharelado – Noturno
+        Serviço Social – Bacharelado – Noturno
+        Teatro
+        Teatro – Licenciatura
+        Zootecnia
+        *Terminalidades do curso Interdisciplinar em Ciência e Tecnologia – Campus Litoral (somente para diplomados em
+        Bacharelado em Ciência e Tecnologia através de ingresso próprio):
+        DESENVOLVIMENTO REGIONAL – Bach. em Desenvolvimento Regional
+        ENGENHARIA DE GESTÃO DE ENERGIA – Bach. em Engenharia de Gestão de Energia
+        ENGENHARIA DE SERVIÇOS – Bach. em Engenharia de Serviços
+        GEOGRAFIA – Licenciatura em Geografia</p>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
