--- a/Páginas/documentos_matricula.html
+++ b/Páginas/documentos_matricula.html
@@ -76,6 +76,61 @@
         </div>
     </nav>
 
+    <p>Quais os documentos obrigatórios de matrícula?
+
+        São os documentos que comprovam a condição acadêmica do candidato e são obrigatórios a todos os candidatos,
+        conforme Edital.
+
+        – Certificado de Conclusão e Histórico Escolar completo do Ensino Médio: Os dois documentos podem estar em uma
+        mesma folha, e o histórico precisa conter carga horária e componente curricular, ou seja, número de horas
+        cursadas e a descrição das disciplinas. Também é necessário que esteja assinado pela autoridade competente. Os
+        documentos são obrigatórios até para o candidato que já possui um curso superior. Em caso de candidato que tenha
+        concluído o Ensino Médio no exterior, é necessária a apresentação de Declaração de Equivalência de Estudos,
+        conforme Resolução nº 155/80, do Conselho Estadual de Educação.
+
+        Para o Vestibular 2023 e o SISU 2023: excepcionalmente, o candidato que concluir o Ensino Médio no ano letivo de
+        2022 e que, no momento do envio da documentação obrigatória para análise através do Portal do Candidato, não
+        tiver o Certificado de Conclusão do Ensino Médio e/ou do Histórico Escolar completo do Ensino Médio deverá
+        enviar, em caráter provisório, a Declaração Provisória sobre Conclusão do Ensino Médio, devidamente preenchida e
+        assinada pela Instituição de Ensino em que concluiu o Ensino Médio, conforme o modelo disponível no Manual do
+        Candidato. O candidato que postar a declaração provisória deverá enviar posteriormente, no Portal do Candidato,
+        o Certificado de Conclusão e o Histórico Escolar do Ensino Médio. Durante a etapa de avaliação acadêmica, haverá
+        a necessidade de complementar a informação, e o envio desses documentos deve ser feito dentro desse prazo.
+
+        – Documento de identificação atualizado, que contenha fotografia clara do candidato e esteja em bom estado de
+        conservação. Os órgãos expedidores validados estão descritos no edital do processo seletivo, mas são válidos RG,
+        Carteira de Motorista (CNH), Carteira de Trabalho, Passaporte e documentos expedidos por Ordens e Conselhos
+        Profissionais e Forças Armadas, entre outros. Documentos como TRI ou Carteira de Estudante, por exemplo, não são
+        válidos nesse caso.
+
+        Estrangeiros ingressantes devem digitalizar e enviar o passaporte (devidamente atualizado) ou documento expedido
+        por autoridade brasileira. Se o candidato estrangeiro não tiver esses documentos, pode apresentar documento de
+        identificação emitido em seu país de origem, desde que acompanhado por tradução juramentada. A tradução
+        juramentada NÃO é necessária em caso de documentos emitidos em espanhol.
+
+        – Declaração assinada de ocupação ou não ocupação de outra vaga em curso de graduação de Instituição Pública de
+        Ensino Superior. Este formulário será preenchido digitalmente no Portal do Candidato. O candidato que marcar que
+        ocupa uma vaga em instituição pública de ensino superior neste formulário terá o prazo de até cinco dias úteis,
+        após a segunda etapa de matrícula, para se desvincular de um dos cursos.
+
+        Veja o vídeo tutorial do envio:
+
+
+
+        OBS: Além da documentação acima, que é obrigatória a TODOS os candidatos, os estudantes que concorrem às vagas
+        reservadas para escola pública, bem como pretos, pardos, indígenas, pessoas com deficiência ou que precisam
+        comprovar renda familiar bruta mensal igual ou inferior a 1,5 salário mínimo nacional per capita, devem enviar
+        outros documentos específicos, de acordo com a modalidade de ingresso. Consulte as sessões correspondentes neste
+        Portal.
+
+        PARA CLASSIFICADOS no CURSO DE EDUCAÇÃO FÍSICA
+
+        – Processos seletivos a partir de 2022: não há necessidade de apresentação de atestado de capacitação física.
+
+        – Processos de 2021 ou anteriores: os candidatos classificados para o curso de Educação Física também devem
+        apresentar, neste momento, atestado médico de capacitação física, expedido por médico, com carimbo e assinatura.
+    </p>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
