--- a/Páginas/formas_ingresso.html
+++ b/Páginas/formas_ingresso.html
@@ -77,6 +77,64 @@
     </nav>
 
 
+
+    <p>Quais as formas de ingresso na graduação da UFRGS?
+
+        Para estudar na UFRGS, são várias as possibilidades:
+
+        Concurso Vestibular – 70% das vagas são preenchidas via Vestibular, o que corresponde a 4.008 vagas. A edição
+        2023 foi realizada em 14 e 15 de janeiro de 2023, com a inclusão do curso ‘Ciências Biológicas: ênfases em
+        Biologia Marinha e Costeira e em Gestão Ambiental Marinha e Costeira’. Ainda não há data do Vestibular 2024 . Os
+        interessados devem acompanhar as atualizações no site da UFRGS e no site da Comissão Permanente de Seleção
+        (Coperse). Sobre edições anteriores, veja aqui.
+
+        Sistema de Seleção Unificada – SISU – a UFRGS destina 1.703 vagas para o ingresso pelo Sisu, o que representa
+        30% do total (Também haverá vagas no curso de Ciências Biológicas: ênfases em Biologia Marinha e Costeira e em
+        Gestão Ambiental Marinha e Costeira. Acesse aqui. As inscrições são realizadas apenas pelo site do MEC:
+        sisu.mec.gov.br .
+
+        Processo Seletivo – Excepcionalmente para as vagas de 2021, o Conselho Universitário aprovou a realização de
+        processo seletivo (PS 2021/1 e PS 2021/2) para as vagas do Vestibular não ocupadas diante da inviabilidade da
+        aplicação de provas na pandemia de covid-19. São usadas notas anteriores do Enem e Vestibular (de 2017 a 2020).
+        Veja o site do PS 2021/1. e confira a página do PS 2021/2. Em 2022/2 foi utilizado o Processo Seletivo Adicional
+        para as vagas não ocupadas no Concurso Vestibular 2022.
+
+        Atenção: o Vestibular e o SISU são processos seletivos distintos, ou seja, os candidatos podem participar de
+        ambos, simultaneamente. Em caso de seleção nas duas modalidades, o estudante deverá optar por uma delas.
+
+        Também há processos seletivos específicos para os cursos abaixo. Clique em cada um deles para obter informações
+        mais detalhadas:
+
+        Biologia Marinha (a partir de 2023, o curso ingressa na seleção via Concurso Vestibular e Sistema de Seleção
+        Unificada – SiSU)
+        Educação do Campo
+        Educação do Campo – Campus Litoral
+
+        Graduações a Distância ( Licenciaturas em Pedagogia, Geografia, Ciências Sociais, Ciências Biológicas e em
+        Ciências da Natureza, além de Bacharelado em Desenvolvimento Rural e Biblioteconomia )
+
+        Indígenas – Processo seletivo específico para indígenas, em sua primeira graduação. As vagas são decididas em
+        comum acordo com a comunidade indígena. Mais informações aqui.
+
+        Refugiados – São oferecidas vagas para pessoas em situação de refúgio em alguns cursos de graduação. O edital de
+        abertura de inscrições para o processo seletivo é divulgado neste link.
+
+        Para quem já é aluno de graduação, existe o sistema de ocupação de vagas ociosas:
+
+        Transferência Voluntária – para alunos de outras IES que já tenham integralizado os dois primeiros semestres
+        completos no curso de origem. Mais informações aqui.
+
+        Transferência Interna – para alunos da UFRGS que querem mudar de curso através de recálculo da média do SiSU ou
+        do CV. A troca de curso por essa modalidade não está disponível para estudantes de transferência voluntária ou
+        ingresso de diplomado. Acesse aqui outras informações.
+
+        Ingresso de Diplomado – para portadores de diploma de curso superior. Mais informações aqui.
+
+        Programa de Estudante Convênio da Graduação (PEC-G) – gerido pelo Ministério de Relações Exteriores, destinado a
+        cidadãos de países em desenvolvimento com os quais o Brasil mantém acordos educacionais e culturais. Acesse aqui
+        mais informações.</p>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
