--- a/Páginas/funcionamento_matricula.html
+++ b/Páginas/funcionamento_matricula.html
@@ -41,7 +41,8 @@
                                 Menu
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="../index.html#Principais Perguntas">Principais Perguntas</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Principais Perguntas">Principais
+                                        Perguntas</a></li>
                                 <li><a class="dropdown-item" href="../index.html#Ingresso">Ingresso</a></li>
                                 <li><a class="dropdown-item" href="../index.html#Vestibular">Vestibular</a></li>
                                 <li><a class="dropdown-item" href="../index.html#SiSu">SiSu</a></li>
@@ -74,6 +75,22 @@
             </div>
         </div>
     </nav>
+
+
+
+    <p>Como funciona a matrícula na UFRGS?
+
+        Após a divulgação dos resultados do processo seletivo, a matrícula dos ingressantes na UFRGS é feita em duas
+        etapas obrigatórias para todos os candidatos:
+
+        (1) online, com o envio de documentos pelo Portal do Candidato e
+
+        (2) online, com apresentação de documentação para Comissão de Graduação (COMGRAD) do curso, para efetivação da
+        matrícula nas disciplinas.
+
+        Além dessas duas etapas, os candidatos ingressantes pelas modalidades de reservas de vagas destinadas a pretos,
+        pardos e indígenas devem também se apresentar à Comissão de Verificação da Autodeclaração Étnico-racial, em
+        data, horário e local divulgados no site de Listagem de Convocação para Verificação da Autodeclaração.</p>
 
 
 
