--- a/Páginas/modalidade_cotas.html
+++ b/Páginas/modalidade_cotas.html
@@ -41,7 +41,8 @@
                                 Menu
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="../index.html#Principais Perguntas">Principais Perguntas</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Principais Perguntas">Principais
+                                        Perguntas</a></li>
                                 <li><a class="dropdown-item" href="../index.html#Ingresso">Ingresso</a></li>
                                 <li><a class="dropdown-item" href="../index.html#Vestibular">Vestibular</a></li>
                                 <li><a class="dropdown-item" href="../index.html#SiSu">SiSu</a></li>
@@ -74,6 +75,65 @@
             </div>
         </div>
     </nav>
+
+
+
+    <p>Quais são as modalidades de cotas na UFRGS?
+
+        O Programa de Ações Afirmativas da UFRGS determina a reserva de, no mínimo, 50% das vagas (cotas) de ingresso na
+        graduação para candidatos egressos do Sistema Público de Ensino Médio. Desde 2018, o Programa de Ações
+        Afirmativas também destina vagas para pessoas com deficiência*.
+
+        O candidato deve escolher com atenção a sua modalidade de cota no ato de inscrição de cada processo seletivo,
+        pois não será possível alterar posteriormente. As vagas reservadas são divididas em oito modalidades de cotas,
+        destinadas exclusivamente aos candidatos que se enquadram nos critérios abaixo:
+
+        modalidade L1 – candidato egresso do Sistema Público de Ensino Médio com renda familiar bruta mensal igual ou
+        inferior a 1,5 salário mínimo nacional per capita;
+
+        modalidade L2 – candidato egresso Sistema Público de Ensino Médio com renda familiar bruta mensal igual ou
+        inferior a 1,5 salário mínimo nacional per capita autodeclarado preto, pardo ou indígena;
+
+        modalidade L3/L5 – candidato egresso do Sistema Público de Ensino Médio independentemente da renda familiar;
+
+        modalidade L4/L6 – candidato egresso do Sistema Público de Ensino Médio independentemente da renda familiar,
+        autodeclarado preto, pardo ou indígena.
+
+        modalidade L9 – candidato egresso do Sistema Público de Ensino Médio com renda familiar bruta mensal igual ou
+        inferior a 1,5 salário mínimo nacional per capita e Pessoa com Deficiência;
+
+        modalidade L10 – candidato egresso Sistema Público de Ensino Médio com renda familiar bruta mensal igual ou
+        inferior a 1,5 salário mínimo nacional per capita autodeclarado preto, pardo ou indígena e Pessoa com
+        Deficiência;
+
+        modalidade L13 – candidato egresso do Sistema Público de Ensino Médio independentemente da renda familiar e
+        Pessoa com Deficiência;
+
+        modalidade L14 – candidato egresso do Sistema Público de Ensino Médio independentemente da renda familiar,
+        autodeclarado preto, pardo ou indígena e Pessoa com Deficiência.
+
+
+
+        A cada uma das modalidades de cotas são destinadas 6,25% do total de vagas de cada curso.
+
+
+
+
+
+        A UFRGS oferece um simulador de cotas para o candidato conferir em qual (is) modalidade (s) se enquadra. Veja
+        em: https://www.ufrgs.br/ingresso/simulador-de-cotas-ufrgs/
+
+        Confira as informações nesta série de vídeos:
+
+
+        Atenção: O candidato que optar por concorrer em uma das modalidades de cotas deve estar ciente que é de sua
+        inteira responsabilidade certificar-se de que atende aos requisitos exigidos e que tem condições de apresentar
+        toda a documentação solicitada na matrícula, comprovando sua condição de acordo com a modalidade escolhida.
+
+        *Observação: neste portal, toda a referência à reserva de vagas para pessoas com deficiência é feita pela
+        terminologia pessoas com deficiência, conforme definição da Convenção Internacional para Proteção e Promoção dos
+        Direitos e Dignidade das Pessoas com Deficiência. Neste site não são utilizados, portanto, os termos:
+        deficiente, portador de deficiência, pessoa com necessidades especiais, portador de necessidades especiais.</p>
 
 
 
