--- a/Páginas/comprovar_renda.html
+++ b/Páginas/comprovar_renda.html
@@ -33,42 +33,44 @@
                             <a class="nav-link active" aria-current="page" href="#">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contato</a>
+                            <a class="nav-link" href="#Principais Perguntas">Principais perguntas</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Menu
+                                Principais Tópicos
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="../index.html#Principais Perguntas">Principais
-                                        Perguntas</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Ingresso">Ingresso</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Vestibular">Vestibular</a></li>
-                                <li><a class="dropdown-item" href="../index.html#SiSu">SiSu</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Processo seletivo">Processo
-                                        seletivo</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Cotas">Cotas</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Pretos, Pardos e indígenas">Preto,
-                                        Pardo, indígena</a></li>
-                                <li><a class="dropdown-item"
-                                        href="../index.html#Resultado e chamamentos">Resultados/chamamentos</a></li>
-                                <li><a class="dropdown-item"
-                                        href="../index.html#Matrícula e documentação">Matrícula/Documentação</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Comprovação de renda">Comprovação de
-                                        renda</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Pessoas com deficiência">Pessoa com
-                                        deficiência</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Calouro">Calouro</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Confirmação de interesse">Confirmação
-                                        interesse</a></li>
+                                <li><a class="dropdown-item" href="#Ingresso">Ingresso</a></li>
+                                <li><a class="dropdown-item" href="#Vestibular">Vestibular</a></li>
+                                <li><a class="dropdown-item" href="#SiSu">SiSu</a></li>
+                                <li><a class="dropdown-item" href="#Processo seletivo">Processo seletivo</a></li>
+                                <li><a class="dropdown-item" href="#Cotas">Cotas</a></li>
+                                <li><a class="dropdown-item" href="#Pretos, Pardos e indígenas">Preto, Pardo,
+                                        indígena</a></li>
+                                <li><a class="dropdown-item" href="#Resultado e chamamentos">Resultados/chamamentos</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#Matrícula e documentação">Matrícula/Documentação</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#Comprovação de renda">Comprovação de renda</a></li>
+                                <li><a class="dropdown-item" href="#Pessoas com deficiência">Pessoa com deficiência</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#Calouro">Calouro</a></li>
+                                <li><a class="dropdown-item" href="#Confirmação de interesse">Confirmação interesse</a>
+                                </li>
                                 <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
-                                <li><a class="dropdown-item" href="./simulador_cotas.html">Simulador Cotas</a></li>
+                                </li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../index.html">Voltar ao início</a></li>
+                                <li><a class="dropdown-item" href="#">Voltar ao início</a></li>
                             </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Páginas/simulador_cotas.html">Simulador de cotas</a>
+                          </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contato</a>
                         </li>
                     </ul>
                 </div>
