--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ingresso na UFT</title>
   <link rel="icon" type="image/x-icon" href="./img/Logo-UFT.png">
-  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -17,7 +16,7 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
 
-  <!--
+
   <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Ingresso na graduação - UFT</a>
@@ -33,15 +32,14 @@
               <a class="nav-link active" aria-current="page" href="#">Início</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contato</a>
+              <a class="nav-link" href="#Principais Perguntas">Principais perguntas</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Menu
+                Principais Tópicos
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a class="dropdown-item" href="#Principais Perguntas">Principais Perguntas</a></li>
                 <li><a class="dropdown-item" href="#Ingresso">Ingresso</a></li>
                 <li><a class="dropdown-item" href="#Vestibular">Vestibular</a></li>
                 <li><a class="dropdown-item" href="#SiSu">SiSu</a></li>
@@ -55,157 +53,23 @@
                 <li><a class="dropdown-item" href="#Calouro">Calouro</a></li>
                 <li><a class="dropdown-item" href="#Confirmação de interesse">Confirmação interesse</a></li>
                 <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
-                <li><a class="dropdown-item" href="./Páginas/simulador_cotas.html">Simulador Cotas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
                 <li><a class="dropdown-item" href="#">Voltar ao início</a></li>
               </ul>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Páginas/simulador_cotas.html">Simulador de cotas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contato</a>
+            </li>
           </ul>
         </div>
       </div>
     </div>
   </nav>
-  -->
-
-  <div class="sidebar close">
-    <div class="logo-details">
-      <i class='bx bxl-c-plus-plus'></i>
-      <span class="logo_name">CodingLab</span>
-    </div>
-    <ul class="nav-links">
-      <li>
-        <a href="#">
-          <i class='bx bx-grid-alt'></i>
-          <span class="link_name">Dashboard</span>
-        </a>
-        <ul class="sub-menu blank">
-          <li><a class="link_name" href="#">Category</a></li>
-        </ul>
-      </li>
-      <li>
-        <div class="iocn-link">
-          <a href="#">
-            <i class='bx bx-collection'></i>
-            <span class="link_name">Category</span>
-          </a>
-          <i class='bx bxs-chevron-down arrow'></i>
-        </div>
-        <ul class="sub-menu">
-          <li><a class="link_name" href="#">Category</a></li>
-          <li><a href="#">HTML & CSS</a></li>
-          <li><a href="#">JavaScript</a></li>
-          <li><a href="#">PHP & MySQL</a></li>
-        </ul>
-      </li>
-      <li>
-        <div class="iocn-link">
-          <a href="#">
-            <i class='bx bx-book-alt'></i>
-            <span class="link_name">Posts</span>
-          </a>
-          <i class='bx bxs-chevron-down arrow'></i>
-        </div>
-        <ul class="sub-menu">
-          <li><a class="link_name" href="#">Posts</a></li>
-          <li><a href="#">Web Design</a></li>
-          <li><a href="#">Login Form</a></li>
-          <li><a href="#">Card Design</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">
-          <i class='bx bx-pie-chart-alt-2'></i>
-          <span class="link_name">Analytics</span>
-        </a>
-        <ul class="sub-menu blank">
-          <li><a class="link_name" href="#">Analytics</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">
-          <i class='bx bx-line-chart'></i>
-          <span class="link_name">Chart</span>
-        </a>
-        <ul class="sub-menu blank">
-          <li><a class="link_name" href="#">Chart</a></li>
-        </ul>
-      </li>
-      <li>
-        <div class="iocn-link">
-          <a href="#">
-            <i class='bx bx-plug'></i>
-            <span class="link_name">Plugins</span>
-          </a>
-          <i class='bx bxs-chevron-down arrow'></i>
-        </div>
-        <ul class="sub-menu">
-          <li><a class="link_name" href="#">Plugins</a></li>
-          <li><a href="#">UI Face</a></li>
-          <li><a href="#">Pigments</a></li>
-          <li><a href="#">Box Icons</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">
-          <i class='bx bx-compass'></i>
-          <span class="link_name">Explore</span>
-        </a>
-        <ul class="sub-menu blank">
-          <li><a class="link_name" href="#">Explore</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">
-          <i class='bx bx-history'></i>
-          <span class="link_name">History</span>
-        </a>
-        <ul class="sub-menu blank">
-          <li><a class="link_name" href="#">History</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">
-          <i class='bx bx-cog'></i>
-          <span class="link_name">Setting</span>
-        </a>
-        <ul class="sub-menu blank">
-          <li><a class="link_name" href="#">Setting</a></li>
-        </ul>
-      </li>
-      <li>
-        <div class="profile-details">
-          <div class="profile-content">
-            <img src="image/profile.jpg" alt="profileImg">
-          </div>
-          <div class="name-job">
-            <div class="profile_name">Prem Shahi</div>
-            <div class="job">Web Desginer</div>
-          </div>
-          <i class='bx bx-log-out'></i>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <section class="home-section d-flex align-items-center min-vh-100">
-    <div class="container">
-      <div class="home-content">
-        <i class='bx bx-menu'></i>
-        <span class="text">Drop Down Sidebar</span>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <h1 class="display-2 fw-bold" data-aos="fade-up">Bem vindo ao seu ingresso na <span
-              class="text-brand">graduação</span></h1>
-          <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Como entrar na UFT</h4>
-          <div data-aos="fade-up" data-aos-delay="200"><a href="#Principais Perguntas" class="btn btn-brand">Vamos
-              ver!</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
 
 
@@ -231,7 +95,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div class="setion-title text-center" data-aos="fade-up" data-aos-delay="100">
+          <div class="setion-title text-center">
             <h1>Principais perguntas</h1>
             <p>Abaixo está as principais perguntas e dúvidas feitas sobre o assunto, leia com atenção e saiba mais!</p>
             <div class="line"></div>
@@ -241,7 +105,7 @@
 
       <div class="row gy-4 text-center">
 
-        <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-lg-3 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="ticket-outline"></ion-icon>
@@ -255,7 +119,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="col-lg-3 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="duplicate-outline"></ion-icon>
@@ -269,7 +133,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="col-lg-3 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="alert-outline"></ion-icon>
@@ -283,7 +147,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-lg-3 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="id-card-outline"></ion-icon>
@@ -297,7 +161,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-lg-3 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="document-text-outline"></ion-icon>
@@ -311,7 +175,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="col-lg-3 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="cash-outline"></ion-icon>
@@ -325,7 +189,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="col-lg-3 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="shield-checkmark-outline"></ion-icon>
@@ -340,7 +204,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-lg-3 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="sad-outline"></ion-icon>
