--- a/Páginas/simulador_cotas.html
+++ b/Páginas/simulador_cotas.html
@@ -34,32 +34,37 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#Principais Perguntas">Principais perguntas</a>
-                          </li>
-                          <li class="nav-item dropdown">
+                        </li>
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                              aria-expanded="false">
-                              Principais Tópicos
+                                aria-expanded="false">
+                                Principais Tópicos
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                              <li><a class="dropdown-item" href="#Ingresso">Ingresso</a></li>
-                              <li><a class="dropdown-item" href="#Vestibular">Vestibular</a></li>
-                              <li><a class="dropdown-item" href="#SiSu">SiSu</a></li>
-                              <li><a class="dropdown-item" href="#Processo seletivo">Processo seletivo</a></li>
-                              <li><a class="dropdown-item" href="#Cotas">Cotas</a></li>
-                              <li><a class="dropdown-item" href="#Pretos, Pardos e indígenas">Preto, Pardo, indígena</a></li>
-                              <li><a class="dropdown-item" href="#Resultado e chamamentos">Resultados/chamamentos</a></li>
-                              <li><a class="dropdown-item" href="#Matrícula e documentação">Matrícula/Documentação</a></li>
-                              <li><a class="dropdown-item" href="#Comprovação de renda">Comprovação de renda</a></li>
-                              <li><a class="dropdown-item" href="#Pessoas com deficiência">Pessoa com deficiência</a></li>
-                              <li><a class="dropdown-item" href="#Calouro">Calouro</a></li>
-                              <li><a class="dropdown-item" href="#Confirmação de interesse">Confirmação interesse</a></li>
-                              <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
-                              <li>
-                                <hr class="dropdown-divider">
-                              </li>
-                              <li><a class="dropdown-item" href="#">Voltar ao início</a></li>
+                                <li><a class="dropdown-item" href="#Ingresso">Ingresso</a></li>
+                                <li><a class="dropdown-item" href="#Vestibular">Vestibular</a></li>
+                                <li><a class="dropdown-item" href="#SiSu">SiSu</a></li>
+                                <li><a class="dropdown-item" href="#Processo seletivo">Processo seletivo</a></li>
+                                <li><a class="dropdown-item" href="#Cotas">Cotas</a></li>
+                                <li><a class="dropdown-item" href="#Pretos, Pardos e indígenas">Preto, Pardo,
+                                        indígena</a></li>
+                                <li><a class="dropdown-item" href="#Resultado e chamamentos">Resultados/chamamentos</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#Matrícula e documentação">Matrícula/Documentação</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#Comprovação de renda">Comprovação de renda</a></li>
+                                <li><a class="dropdown-item" href="#Pessoas com deficiência">Pessoa com deficiência</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#Calouro">Calouro</a></li>
+                                <li><a class="dropdown-item" href="#Confirmação de interesse">Confirmação interesse</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Voltar ao início</a></li>
                             </ul>
-                          </li>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contato</a>
                         </li>
@@ -71,12 +76,87 @@
 
 
 
+    <section id="Ingresso" class="section-padding section-connector">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="setion-title text-center">
+                        <h1>Simulador de Cotas</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut
+                            deserunt magnam
+                            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita
+                            quibusdam
+                            consectetur? Nemo!</p>
+                        <div class="line"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Estudou em escola pública todos os três anos do Ensino Médio?</label><br>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="escola" id="escola-sim" value="sim">
+                    <label class="form-check-label" for="escola-sim">Sim</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="escola" id="escola-nao" value="nao">
+                    <label class="form-check-label" for="escola-nao">Não</label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Renda per capita menor ou igual a 1,5 salário mínimo?</label><br>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="renda" id="renda-sim" value="sim">
+                    <label class="form-check-label" for="renda-sim">Sim</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="renda" id="renda-nao" value="nao">
+                    <label class="form-check-label" for="renda-nao">Não</label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Você é autodeclarado preto, pardo ou indígena?</label><br>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="etnia" id="etnia-sim" value="sim">
+                    <label class="form-check-label" for="etnia-sim">Sim</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="etnia" id="etnia-nao" value="nao">
+                    <label class="form-check-label" for="etnia-nao">Não</label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Você é pessoa com deficiência?</label><br>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="deficiencia" id="deficiencia-sim" value="sim">
+                    <label class="form-check-label" for="deficiencia-sim">Sim</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="deficiencia" id="deficiencia-nao" value="nao">
+                    <label class="form-check-label" for="deficiencia-nao">Não</label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Verificar Modalidade de Cotas</button>
+            </div>
+            </form>
+
+            <div id="resultado" class="mt-4"></div>
+        </div>
+        </div>
+    </section>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../js/simulador.js"></script>
 </body>
 
 </html>
