--- a/Páginas/simulador_cotas.html
+++ b/Páginas/simulador_cotas.html
@@ -66,6 +66,9 @@
                             </ul>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Página Inicial</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#">Contato</a>
                         </li>
                     </ul>
@@ -76,12 +79,29 @@
 
 
 
-    <section id="Ingresso" class="section-padding section-connector">
+    <!-- Home -->
+  <section id="home" class="d-flex align-items-center min-vh-100">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1 class="display-2 fw-bold" data-aos="fade-up">Bem vindo ao nosso <span
+              class="text-brand">Simuladoor de Cotas</span></h1>
+          <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Uma pesquisa mais rápida!</h4>
+          <div data-aos="fade-up" data-aos-delay="200"><a href="#Simulador" class="btn btn-brand">Teste já!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+    <section id="Simulador" class="section-padding section-connector">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="setion-title text-center">
-                        <h1>Simulador de Cotas</h1>
+                        <h1>Simulador</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut
                             deserunt magnam
                             tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita
@@ -156,6 +176,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="../js/main.js"></script>
     <script src="../js/simulador.js"></script>
 </body>
 
