--- a/Páginas/simulador_cotas.html
+++ b/Páginas/simulador_cotas.html
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-md-6">
           <h1 class="display-2 fw-bold" data-aos="fade-up">Bem vindo ao nosso <span
-              class="text-brand">Simuladoor de Cotas</span></h1>
+              class="text-brand">Simulador de Cotas</span></h1>
           <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Uma pesquisa mais rápida!</h4>
           <div data-aos="fade-up" data-aos-delay="200"><a href="#Simulador" class="btn btn-brand">Teste já!</a>
           </div>
