--- a/index.html
+++ b/index.html
@@ -1719,10 +1719,19 @@
   </section>
 
 
+  <!-- Link do bootstrap da página -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Outros -->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+
+  <!-- Link dos Icons -->
   <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
+
+  <!-- Outros -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <!-- Link do JS da página -->
   <script src="./js/main.js"></script>
 </body>
 
